--- a/teaching/2014S-math121/index.html
+++ b/teaching/2014S-math121/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default3
 title: Math 121 (Enhanced) - Spring 2014, University of Kansas
 section: Teaching
 last_modified_at: 2014-05-06
@@ -28,7 +28,7 @@ last_modified_at: 2014-05-06
     <li><a href="http://www.math.ku.edu/academics/gateways/">Gateway Exam</a></li>
     <!--<ul>
         <li> <em>Online Exam Deadline</em>: Friday, October 11 at 11:59 P.M.
-        <li> <em>In-Lab Exam Begins</em>: Monday, September 23 at 9:00 A.M. 
+        <li> <em>In-Lab Exam Begins</em>: Monday, September 23 at 9:00 A.M.
         <li> <em>In-Lab Exam Ends</em>: Friday, October 25 at 5:00 P.M.
     </ul>-->
     <li>WebAssign (see sidebar link in Blackboard)</li>
@@ -112,7 +112,7 @@ last_modified_at: 2014-05-06
         <li>Paper homework will be collected regularly at the end of class. Assignments and their due dates are subject to change and should be checked daily.</li>
         <li>Quizzes may be given without advance notice, but will usually be announced at least one class day in advance (often they will cover the reading for that day).</li>
         <li>Class attendance is an important component of success in the course! If a student is unable to attend class due to illness or a medical/family emergency, he/she should contact the instructor immediately to arrange for an excused absence.</li>
-        <li>Participation and attendance is strongly encouraged! This means you should: 
+        <li>Participation and attendance is strongly encouraged! This means you should:
             <ul>
             <li>ask/answer questions</li>
             <li>make contributions to group work</li>
@@ -177,7 +177,7 @@ last_modified_at: 2014-05-06
 <td style="text-align: center">#2 reading</td>
 <TD>
 <em>Sections 2.1 - 2.2 </em>: limit of a function <br />
-<em>Sections 2.3 - 2.4 </em>: calculating limits, introduction of continuity 
+<em>Sections 2.3 - 2.4 </em>: calculating limits, introduction of continuity
 </TD>
 <TD style="text-align: center">
 </TD>
@@ -508,5 +508,5 @@ Deadlines:
 
 
 
-<div style="clear:both; "></div>    
+<div style="clear:both; "></div>
 </div>
