--- a/teaching/2015S-EECS448/index.html
+++ b/teaching/2015S-EECS448/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default3
 title: EECS 448 - Spring 2015, University of Kansas
 section: Teaching
 last_modified_at: 2015-08-21
@@ -13,10 +13,10 @@ Friday 10-11</p>
 
 <h3>Labs</h3>
 <ul>
-<li><b>Lab 01</b>  - Matlab intro.<br> 
+<li><b>Lab 01</b>  - Matlab intro.<br>
 <a href="EECS448_Lab01.pdf">Assignment</a> (due week of 2/2).  <a href="EECS448_Slides01.pdf">Slides</a>.<br><br>
 
-<li><b>Lab 02</b> - HDR images in Matlab.<br> 
+<li><b>Lab 02</b> - HDR images in Matlab.<br>
 <a href="EECS448_Lab02.pdf">Assignment</a> (due week of 2/9), <a href="EECS448_Lab02_images.zip">Files</a>. <a href="EECS448_Slides02.pdf">Slides</a>.<br><br>
 
 <li><b>Lab 03</b> - More HDR: Photomatix and Matlab.<br>
