--- a/apps/email_extractor.html
+++ b/apps/email_extractor.html
@@ -8,7 +8,7 @@ last_modified_at: 2016-03-21
 <h2>Email extractor</h2>
 
 <p>
-Paste text containing email addresses here:<br />
+Paste text containing comma-seperated email addresses here:<br />
 <textarea rows="10" cols="50" id="textbox"></textarea>
 </p>
 <p>
