--- a/apps/quadratic.html
+++ b/apps/quadratic.html
@@ -17,7 +17,7 @@ last_modified_at: 2016-03-26
 <p>
 <span id="answer"></span><br />
 </p>
-<canvas id="canvas" width="500px" height="500px"></canvas>
+<canvas id="canvas" width="500px" height="500px" style="aspect-ratio: 1;width:100%;max-width:500px;"></canvas>
 </span>
 
 <script>// quadratic equation function
@@ -60,7 +60,9 @@ function quadratic() {
             if (xS == xL)
                 result.innerHTML = "x = " + xS;
             else
-                result.innerHTML = "x<sub>1</sub> = " + xS.toString() + "<br />x<sub>2</sub> = " + xL.toString();
+                result.innerHTML =
+                `<div style="display:inline-block;margin-right:2rem;">x<sub>1</sub> = ${xS.toFixed(4)}</div>`+
+                `<div style="display:inline-block;margin-left:2rem;">x<sub>2</sub> = ${xL.toFixed(4)}</div>`;
 
             draw(a,b,c, xS, xL);
         }
