Cleaned up unnecessary files for layout overhaul

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ last_modified_at: 2022-08-27
 <p>In the <a href="/teaching/">teaching section</a> is an archive of courses that I have taught and,
 when I'm not using blackboard for course management, information about ongoing courses.</p>
 
-<p>In the <a href="/academics.html">academics section</a> I have catalogued all of the courses I have
+<p>In the <a href="/bio/academics.html">academics section</a> I have catalogued all of the courses I have
 taken while pursuing my M.S. in Computer Science and my M.A. in Mathematics in addition to a brief
 academic bio.</p>
 
