--- a/apps/color_compare.html
+++ b/apps/color_compare.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1" />
   <style>
     :root {
       --header-height: 3rem;
