--- a/apps/color_compare.html
+++ b/apps/color_compare.html
@@ -1,5 +1,7 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1" />
   <style>
     :root {
