--- a/apps/color_compare.html
+++ b/apps/color_compare.html
@@ -31,6 +31,7 @@
       height: calc(100% - var(--header-height));
     }
     article div {
+      min-height: 150px;
       height: calc(100% / 3);
       align-items: center;
       position: relative;
