Fixed color compare height issue

--- a/apps/color_compare.html
+++ b/apps/color_compare.html
@@ -6,7 +6,9 @@
   <style>
     :root {
       --header-height: 3rem;
-      
+    }
+    html, body {
+      height: 100%
     }
     body {
       margin: 0;
@@ -34,7 +36,7 @@
       height: calc(100% / 3);
       align-items: center;
       position: relative;
-      min-height: 150px;
+      /*min-height: 150px;*/
     }
     article div span {
       text-shadow: 0 0 20px white;
