--- a/apps/color_compare.html
+++ b/apps/color_compare.html
@@ -36,7 +36,7 @@
       height: calc(100% / 3);
       align-items: center;
       position: relative;
-      /*min-height: 150px;*/
+      min-height: 150px;
     }
     article div span {
       text-shadow: 0 0 20px white;
