--- a/teaching/2015S-EECS448/index.html
+++ b/teaching/2015S-EECS448/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default3
+layout: main
 title: EECS 448 - Spring 2015, University of Kansas
 section: Teaching
 last_modified_at: 2015-08-21
