--- a/teaching/2013S-math115/index.html
+++ b/teaching/2013S-math115/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default3
+layout: main
 title: Math 115 - Spring 2013, University of Kansas
 section: Teaching
 last_modified_at: 2015-08-21
