--- a/teaching/2014S-math121/index.html
+++ b/teaching/2014S-math121/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default3
+layout: main
 title: Math 121 (Enhanced) - Spring 2014, University of Kansas
 section: Teaching
 last_modified_at: 2014-05-06
