Added accessability labels in a few links

--- a/teaching/2014S-math121/index.html
+++ b/teaching/2014S-math121/index.html
@@ -484,7 +484,7 @@ Review
 Links:
 <br /><br />
 <ul>
-	<li><a href="http://www.math.ku.edu/academics/gateways/index.html" target="_blank">Gateway Exam website.</a></li>
+	<li><a href="http://www.math.ku.edu/academics/gateways/index.html" target="_blank" aria-label="Exam website, broken link (opens in a new tab)">Gateway Exam website.</a></li>
     <br />
 	<li><a href="mailto:gateway-help@math.ku.edu">Gateway help email address.</a></li>
     <br />
