--- a/teaching/2013F-math121/index.html
+++ b/teaching/2013F-math121/index.html
@@ -1,7 +1,7 @@
 ---
 layout: main
 title: Math 121 (Enhanced) - Fall 2013, University of Kansas
-section: Teaching
+section: Bio
 last_modified_at: 2015-08-21
 ---
 
