--- a/teaching/2014S-math121/index.html
+++ b/teaching/2014S-math121/index.html
@@ -1,7 +1,7 @@
 ---
 layout: main
 title: Math 121 (Enhanced) - Spring 2014, University of Kansas
-section: Teaching
+section: Bio
 last_modified_at: 2014-05-06
 ---
 
