--- a/teaching/2015S-EECS448/index.html
+++ b/teaching/2015S-EECS448/index.html
@@ -1,7 +1,7 @@
 ---
 layout: main
 title: EECS 448 - Spring 2015, University of Kansas
-section: Teaching
+section: Bio
 last_modified_at: 2015-08-21
 ---
 
