Small style fixes

--- a/Games/Set/index.html
+++ b/Games/Set/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style/sweetalert.css">
     <link rel="stylesheet" type="text/css" href="style/master.css">
-    <link rel="icon" type="image/png" href="/assets/favicon.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <title>Set</title>
 </head>
 <body onresize="resizedWindow()">
-    <div id="div_header"><a onclick="javascript:showRules()">Rules</a><span id="status"></span></div>
+    <div id="div_header"><button onclick="javascript:showRules()">Rules</button><span id="status"></span></div>
 
     <div id="div_game" class="fullView">
         <canvas id="board">Please install a modern browser that supports Canvas elements!</canvas>
