Update aspect ratio list in image cropper

--- a/apps/image_cropper.html
+++ b/apps/image_cropper.html
@@ -17,22 +17,22 @@ extra_css: extra_css/apps/image_cropper.css
 
       <select id="aspect-ratio" disabled>
           <option value="free">Freeform</option>
-          <optgroup label="Square">
-              <option value="1:1">1:1</option>
-          </optgroup>
-          <optgroup label="Landscape/Portrait">
-              <option value="16:9">16:9</option>
-              <option value="9:16">9:16</option>
-          </optgroup>
-          <optgroup label="Classic Photo">
+          <option value="1:1">1:1</option>
+          <optgroup label="Photography">
+              <option value="2:3">2:3</option>
+              <option value="3:2">3:2</option>
               <option value="3:4">3:4</option>
               <option value="4:3">4:3</option>
-          </optgroup>
-          <optgroup label="Postcard">
+              <option value="4:5">4:5</option>
+              <option value="5:4">5:4</option>
               <option value="4:6">4:6</option>
               <option value="6:4">6:4</option>
+              <option value="5:7">5:7</option>
+              <option value="7:5">7:5</option>
           </optgroup>
-          <optgroup label="Widescreen">
+          <optgroup label="Desktop Background">
+              <option value="16:9">16:9</option>
+              <option value="9:16">9:16</option>
               <option value="16:10">16:10</option>
               <option value="10:16">10:16</option>
               <option value="21:9">21:9</option>
